gccida/c0/pushdecl
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pushdecl/src/c-decl.c:2630:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v2; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pushdecl/src/c-decl.c:2635:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *initial; // [rsp+8h] [rbp-68h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pushdecl/src/c-decl.c:2638:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *oldlocal; // [rsp+20h] [rbp-50h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pushdecl/src/c-decl.c:2832:12: error: expected expression
*( _OWORD *)( ( char *)&x->block + 88) = *( _OWORD *)( ( char *)&oldglobal->block + 88); 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pushdecl/src/c-decl.c:2832:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&x->block + 88) = *( _OWORD *)( ( char *)&oldglobal->block + 88); 
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pushdecl/src/c-decl.c:2832:53: error: expected expression
*( _OWORD *)( ( char *)&x->block + 88) = *( _OWORD *)( ( char *)&oldglobal->block + 88); 
                                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pushdecl/src/c-decl.c:2832:45: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&x->block + 88) = *( _OWORD *)( ( char *)&oldglobal->block + 88); 
                                            ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pushdecl/src/obj/c-decl.o] Error 1
